--- a/src/App.css
+++ b/src/App.css
@@ -469,13 +469,34 @@ footer {
 .progress-bar-foreground {
   height: 100%;
   background-color: #4CAF50;
-  /* İlerleme için yeşil renk */
   border-radius: 10px;
   transition: width 0.4s ease-in-out;
-  /* Genişlik değişimine yumuşak animasyon */
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   font-size: 0.8rem;
+}
+
+.contact-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.contact-links a {
+  color: var(--footer-text);
+  transition: color 0.3s, transform 0.3s;
+}
+
+.contact-links a:hover {
+  color: var(--primary-accent);
+  transform: scale(1.2);
+}
+
+.contact-links svg {
+  width: 28px;
+  height: 28px;
+  vertical-align: middle;
 }
